favorite impl and entity graph,cache fixes